[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blade-ai"
# Versions are coordinated across pyproject.toml, tui/package.json,
# src/chaos_agent/__init__.py, and src/chaos_agent/server/schemas.py.
# The M11 release.yml guards enforce tag↔file equality before
# publishing — bump all four in one commit.
version = "0.1.1"
description = "Chaos Engineering Agent for Kubernetes fault injection"

requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai>=1.0",
    "langchain-core>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer[all]>=0.15",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "aiosqlite>=0.20",
    "langgraph-checkpoint-sqlite>=2.0",
    "duckduckgo-search>=7.0",
    "prompt-toolkit>=3.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
]
postgres = ["asyncpg>=0.29"]

[project.scripts]
blade-ai = "chaos_agent.cli.main:app"
blade-ai-server = "chaos_agent.server.app:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_agent"]

# Embed the TS TUI bundle so wheel users get the new TUI without an
# extra `npm install -g`. The bundle must be built BEFORE `uv build` —
# CI runs `npm --prefix tui run build` first; locally that's a one-time
# `cd tui && npm install && npm run build` step.
#
# Editable installs (`pip install -e .`) skip this step (force-include
# only fires on wheel builds) — main.py's _resolve_ts_bundle walks the
# repo tree to find tui/dist/cli.js for that case.
[tool.hatch.build.targets.wheel.force-include]
"tui/dist/cli.js" = "chaos_agent/_tui_assets/cli.js"

# sdist intentionally excludes node_modules / dist / coverage etc. so
# `uv build --sdist` doesn't ship multi-MB build artifacts. Source
# distributions only carry source — wheel users are the bundle's real
# target.
[tool.hatch.build.targets.sdist]
exclude = [
  "tui/node_modules",
  "tui/dist",
  "tui/coverage",
  ".github",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
