[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blade-ai"
# Versions are coordinated across pyproject.toml, tui/package.json,
# src/chaos_agent/__init__.py, and src/chaos_agent/server/schemas.py.
# The M11 release.yml guards enforce tag↔file equality before
# publishing — bump all four in one commit.
version = "0.3.0"
description = "Chaos Engineering Agent for Kubernetes fault injection"

authors = [
    { name = "林曜(526255)", email = "jiangzelin.jzl@alibaba-inc.com" }
]

requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai>=1.0",
    "langchain-core>=1.3.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer[all]>=0.15",
    "httpx>=0.28",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "aiosqlite>=0.20",
    "langgraph-checkpoint-sqlite>=2.0",
    "duckduckgo-search>=7.0",
    "prompt-toolkit>=3.0",
    "rich>=13.7",
    "tiktoken>=0.8,<1.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-exporter-prometheus>=0.46b0",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
    # Build backend — already in [build-system].requires (uv build auto-installs
    # it in the isolated build env). Listed here too so it lands in the dev
    # .venv, letting the IDE resolve hatch_build.py's BuildHookInterface import
    # and `uv build --no-build-isolation` work.
    "hatchling>=1.0",
]
postgres = ["asyncpg>=0.29"]

[project.scripts]
blade-ai = "chaos_agent.cli.main:app"
blade-ai-server = "chaos_agent.server.app:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_agent"]
# Keep junk out of force-included dirs: macOS Finder droppings, and the
# runtime logs ChaosBlade writes under vendor/chaosblade/logs/ after it's
# been run locally (the CI-downloaded tarball has none). Applies to the
# platform-wheel hook's vendor force-include too.
exclude = ["**/.DS_Store", "**/chaosblade/logs/**"]

# Platform wheels: the build hook bakes vendor/chaosblade into the wheel
# and stamps a platform tag when BLADE_AI_WHEEL_PLATFORM is set (CI). A
# no-op for the universal wheel. See hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Embed the TS TUI bundle so wheel users get the new TUI without an
# extra `npm install -g`. The bundle must be built BEFORE `uv build` —
# CI runs `npm --prefix tui run build` first; locally that's a one-time
# `cd tui && npm install && npm run build` step.
#
# Editable installs (`pip install -e .`) skip this step (force-include
# only fires on wheel builds) — main.py's _resolve_ts_bundle walks the
# repo tree to find tui/dist/cli.js for that case.
[tool.hatch.build.targets.wheel.force-include]
"tui/dist/cli.js" = "chaos_agent/_tui_assets/cli.js"
# Bundle the default skill pack into the wheel. Skills are platform-
# independent markdown + scripts (~216K), so unlike the ChaosBlade
# binary (downloaded at runtime per-platform) they ship directly in
# the wheel. On first run, get_skills_dir() materializes this bundled
# copy into ``~/.blade-ai/skills`` so it's user-editable + hot-reloadable
# and ``blade-ai skills install`` can add more alongside it.
"skills/k8s-chaos-skills" = "chaos_agent/_skills/k8s-chaos-skills"

# sdist intentionally excludes node_modules / dist / coverage etc. so
# `uv build --sdist` doesn't ship multi-MB build artifacts. Source
# distributions only carry source — wheel users are the bundle's real
# target.
[tool.hatch.build.targets.sdist]
exclude = [
  "tui/node_modules",
  "tui/dist",
  "tui/coverage",
  ".github",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"